Fixed scrollbar (again#3)!

--- a/src/styles/widgets/panel.styl
+++ b/src/styles/widgets/panel.styl
@@ -1,11 +1,12 @@
 #editor
   .panel
     width 100%
+    height 100%
     background-color #1e1e1e
     border-right 1px solid rgba(0,0,0,0.35)
     box-shadow inset -1px 0 rgba(255,255,255,.05)
     overflow hidden
-    position relative
+    //position relative
 
     .tabs
       background linear-gradient(bottom, #272727, #313131)
@@ -38,9 +39,11 @@
     .content
       overflow hidden
       position relative
-      height: calc(100% - 8px)
+      height: 100%
+      //height: calc(100% - 8px)
 
       padding 0 20px 10px
+      padding-bottom: 24px
 
       h1
         color #ccc
