--- a/src/styles/widgets/sidebar.styl
+++ b/src/styles/widgets/sidebar.styl
@@ -2,7 +2,7 @@
   .sidebar
     position absolute
     left 0
-    top -1px
+    top 0px
 
     width 310px
     height 100%
